travis ci confg update with push to pages repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,12 @@ install:
 # command to run tests
 script:
   - pelican content
+# deployment to github pages repo
+deploy:
+  provider: pages
+  repo: $PAGES_REPO_URL
+  local_dir: /output
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  on:
+    branch: master
