--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 deploy:
   provider: pages
   local_dir: output
-  repo: $PAGES_REPO_URL
+  repo: https://github.com/lessonsnlearnings/lessonsnlearnings.github.io
   target_branch: master
   skip_cleanup: true
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
