Switching pelican build to deployment config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - pelican content
+  - pelican content -s publishconf.py
 # deployment to github pages repo
 deploy:
   provider: pages
